--- a/exe.css
+++ b/exe.css
@@ -9,41 +9,40 @@ body {
 header, nav, section, footer {
     margin: 20px;
 }
-
 header {
     background-color: #e96a63;
     color: #fff;
     text-align: center;
     padding: 20px;
 }
-
 header h1 {
     margin: 0;
+    font-size: 50px;
 }
-
 header p {
-    margin: 10px 0;
+    margin: 15px 0;
     text-align: center;
+    font-size: 20px;
 }
 
 nav ul {
     list-style: none;
     padding: 0;
     text-align: center;
+    margin-top: -50px;
 }
-
 nav li {
     display: inline-block;
     margin-right: 20px;
 }
-
 nav a {
     text-decoration: none;
     color: #58bfba;
     font-weight: bold;
-    font-size: 16px;
+    font-size: 20px;
 }
 
+/* Hauptinformatin: Video + Projektbeschreibung*/
 section {
     background-color: #fff;
     padding: 20px;
@@ -51,39 +50,265 @@ section {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     margin-bottom: 20px;
 }
-
 .video-container {
     position: relative;
     max-width: 980px;
     margin: 0 auto;
 }
-
 video, img {
     width: 100%;
     height: auto;
     display: block;
     border-radius: 5px;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
 }
-
 .video-container img {
     margin: 10px 0;
     width: 100%;
     max-width: 380px; /* Ajusta el tamaño de la imagen según tus necesidades */
     height: auto;
     float: right; 
-    margin-left: 150pxpx; 
-    margin-top: 10px; 
-
+    margin-left: 150px ; 
+    margin-top: 70px; 
 }
-
 h2 {
     color: #58bfba;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
+    font-size: 40px;
 }
-
+h4 {
+    color: #58bfba;
+    margin-bottom: 20px;
+    font-size: 30px;
+}
 p {
     text-align: justify;
+    line-height: 1.5em;
+
+}
+
+/* Werk: Login - Tagebuch - 3D Karte */
+#werk {
+    text-align: center;
+    padding: 20px;
+}
+.gallery {
+    display: flex;
+    justify-content: center;
+}
+.gallery-item {
+    margin: 20px;
+}
+.gallery-item:first-child {
+    margin-right: -80px; 
+}
+.gallery-item img {
+    max-width: 80%;
+    height: auto;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease-in-out;
+}
+.gallery-item video {
+    max-width: 65%;
+    height: auto;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease-in-out;
+}
+
+/*.gallery-item img:hover {
+    transform: scale(1.1);
+}*/
+
+/* Navegation: Konzeption - Prototyp - Desing */
+
+/* Konzeption */
+#konzeption {
+    text-align: center;
+    padding: 20px;
+}
+.content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.image-text-persona,
+.title-image-flowchart {
+    margin: 20px;
+}
+.image-text-persona {
+    display: flex;
+    align-items: center;
+}
+.image-text-persona img {
+    max-width: 60%;
+    height: auto;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    margin-right: 20px;
+}
+.title-image-flowchart img {
+    max-width: 100%;
+    height: auto;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    margin-right: 20px;
+}
+.text {
+    text-align: left;  
+}
+.text h3 {
+    color: #e96a63;
+}
+.title-image-flowchart,
+.image-text-inspiration h3 {
+    color: #e96a63;
+    margin-bottom: 20px;
+    font-size: 30px;
+}
+
+/* Prototyp*/
+#prototyp {
+    text-align: center;
+    padding: 20px;
+}
+.contentP {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.description-image-wireframes,
+.title-image-stylesguide {
+    margin: 20px;
+}
+.description-image-wireframes {
+    display: flex;
+    align-items: center;
+}
+.description-image-wireframes .text {
+    text-align: left;
+    margin-top: -400px;
+
+}
+.description-image-wireframes img {
+    max-width: 80%;
+    height: auto;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    margin-left: 20px; /* Alinea la imagen a la derecha de la descripción */
+}
+.title-image-stylesguide img {
+    max-width: 100%;
+    height: auto;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    margin-left: 20px; /* Alinea la imagen a la derecha de la descripción */
+}
+.title-image-stylesguide,
+.description-image-wireframes h3 {
+    color: #e96a63;
+    margin-bottom: 20px;
+    font-size: 30px;
+}
+.text {
+    text-align: left;
+}
+a {
+    color: #3498db;
+    text-decoration: none;
+    display: inline-block;
+    margin-top: 50px;
+    font-size: 20px;
+}
+a:hover {
+    text-decoration: underline;
+}
+
+
+/* Desing */
+#design {
+    text-align: center;
+    padding: 20px;
+}
+.content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.image-link-desing,
+.title-image-medium {
+    margin: 20px;
+}
+
+.image-link-desing h2 {
+    color: #58bfba;
+    margin-bottom: 10px;
+    font-size: 40px;
+}
+
+.image-link-desing p,
+.title-image-medium .text p {
+    margin-bottom: 10px;
+}
+.image-link-desing{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.image-link {
+    margin: 10px;
+    text-align: center;
+}
+.image-link img {
+    max-width: 80%;
+    height: auto;
+    border-radius: 5px;
+    box-shadow: 0 0 0px rgba(0, 0, 0, 0.1);
+    margin-bottom: 10px;
+}
+/*.title-image-medium img {
+    max-width: 100%;
+    height: auto;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    margin-bottom: 10px;
+}*/
+.title-image-medium img {
+    margin-right: 20px; /* Espaciado entre la imagen y el texto */
+    max-width: 20%;
+}
+/* Modificación para colocar la imagen a la izquierda y el texto a la derecha */
+.title-image-medium {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.title-image-medium .text {
+    flex: 1; /* Hace que ocupe el espacio restante */
+    margin-right: 30px; /* Espaciado entre la imagen y el texto */
+}
+.image-link a {
+    color: #e96a63;
+    text-decoration: none;
+    font-size: 40px;
+}
+
+.title-image-medium p {
+    text-align: left;
+}
+.image-link h3,
+.title-image-medium h3 {
+    color: #e96a63;
+    margin-bottom: 20px;
+    font-size: 30px;
+}
+.image-link a:hover,
+.title-image-medium a:hover {
+    text-decoration: underline;
 }
 
 footer {
